--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 aaa古浩批发
-<img src="https://imgloc.com/image/CeLABt" alt="古浩" width="180" height="180">
+<img src="https://imgloc.com/image/CeLABt" alt="guhao" width="180" height="180">
